--- a/.github/workflows/update_rss.yml
+++ b/.github/workflows/update_rss.yml
@@ -1,15 +1,12 @@
-name: Update RSS Feed
+name: Run run_rss.py Daily
 
 on:
   schedule:
-    - cron: "0 3 * * *"  # Runs daily at 3 AM UTC
-  push:
-    branches:
-      - main  # Runs when pushing to the main branch
-  workflow_dispatch:  # Allows manual execution from GitHub Actions UI
+    - cron: "30 5 * * *"  # Runs daily at 05 30 AM UTC
+  workflow_dispatch:  # Allows manual execution
 
 jobs:
-  update-rss:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,20 +16,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"  # Use the latest Python 3 version
+          python-version: "3.x"
 
-      - name: Install dependencies
+      - name: Install dependencies (if required)
         run: |
-          pip install -r requirements.txt  # Install dependencies (if any)
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run RSS script
-        run: python run_rss.py  # Execute the script
-
-      - name: Commit and Push updated RSS feed
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add rss.xml  # Add the generated RSS feed file
-          git commit -m "Updated RSS feed"
-          git push
-        continue-on-error: true  # Avoid breaking if no changes are detected
+      - name: Run run_rss.py script
+        run: run_rss.py  # Replace with your script name
