Fix .github documentation issues and replace kvshvl.in with kushalsamant.github.io
- Fixed incorrect .workflows directory paths in technical.md and setup.md
- Updated legal document line counts to accurate values (839, 913, 612)
- Corrected filename references from cancellationandrefundpolicy to cancellationrefund
- Replaced all instances of kvshvl.in with kushalsamant.github.io (except CNAME)
- Updated document statistics tables with corrected totals

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 author: "Kushal Samant"
 description: "Licensed architect and software developer. Problem solver across architecture, SaaS development, and design. 150+ projects, 296 essays."
-email: kushaldsamant@gmail.com
+email: writetokushaldsamant@gmail.com
 url: "https://kushalsamant.github.io"
 baseurl: ""
 google_analytics: UA-105795582-1
