--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# Keep existing Jekyll files during migration
-# _site/ (will remove after migration complete)
+# Jekyll (no longer used - migrated to Next.js)
+_site/
