--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
-  "name": "kushalsamant-github-io",
+  "name": "kvshvl-platform",
   "version": "1.0.0",
   "private": true,
+  "description": "KVSHVL Platform Monorepo - Unified platform for ASK, Sketch2BIM, and Reframe",
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:workspaces": "npm run build --workspaces",
+    "dev:workspaces": "npm run dev --workspaces --if-present",
+    "test:workspaces": "npm run test --workspaces --if-present",
+    "lint:workspaces": "npm run lint --workspaces --if-present",
+    "clean": "npm run clean --workspaces --if-present && rm -rf node_modules"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kushalsamant/kvshvl-platform.git"
+  },
+  "author": "Kushal Samant",
+  "license": "MIT",
   "dependencies": {
     "@kushalsamant/design-template": "^1.3.2",
     "gray-matter": "^4.0.3",
     "next": "^14.2.5",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remark": "^15.0.1",
