Remove git submodule and update documentation references

--- a/.env.production
+++ b/.env.production
@@ -100,8 +100,6 @@ ASK_NEXTAUTH_SECRET=lFGHiDWlnSC1yn1F95VgqttX0WZ2s4o+Ybsm9ELw564=
 ASK_AUTH_SECRET=lFGHiDWlnSC1yn1F95VgqttX0WZ2s4o+Ybsm9ELw564=
 
 # Google OAuth (ASK-specific)
-ASK_GOOGLE_CLIENT_ID=620186529337-3e8vnit3kpn5a4q4k9mreceg1f63vd4g.apps.googleusercontent.com
-ASK_GOOGLE_SECRET=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
 
 # API Configuration
 ASK_NEXT_PUBLIC_API_URL=https://ask-api.onrender.com
@@ -150,21 +148,19 @@ ASK_PYTHONPATH=.
 # Deploy to: https://vercel.com/kvshvl/reframe/settings/environment-variables
 
 # NextAuth Configuration
-REFRAME_AUTH_URL=https://reframe-ai.vercel.app
-REFRAME_NEXTAUTH_URL=https://reframe-ai.vercel.app
+REFRAME_AUTH_URL=https://reframe.vercel.app
+REFRAME_NEXTAUTH_URL=https://reframe.vercel.app
 REFRAME_NEXTAUTH_SECRET=lFGHiDWlnSC1yn1F95VgqttX0WZ2s4o+Ybsm9ELw564=
 REFRAME_AUTH_SECRET=lFGHiDWlnSC1yn1F95VgqttX0WZ2s4o+Ybsm9ELw564=
 
 # Google OAuth (Reframe-specific)
-REFRAME_GOOGLE_CLIENT_ID=620186529337-0d9u3950ph7j4cl7i8bit6prlrq0elgs.apps.googleusercontent.com
-REFRAME_GOOGLE_CLIENT_SECRET=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
 
 # API Configuration
 REFRAME_API_URL=https://reframe-api.onrender.com
 REFRAME_NEXT_PUBLIC_API_URL=https://reframe-api.onrender.com
 
 # Application Configuration
-REFRAME_NEXT_PUBLIC_SITE_URL=https://reframe-ai.vercel.app
+REFRAME_NEXT_PUBLIC_SITE_URL=https://reframe.vercel.app
 REFRAME_NEXT_PUBLIC_FREE_LIMIT=5
 
 # =============================================================================
@@ -189,7 +185,7 @@ REFRAME_ENVIRONMENT=production
 REFRAME_DEBUG=false
 
 # CORS Configuration
-REFRAME_CORS_ORIGINS=https://reframe-ai.vercel.app,https://www.reframe-ai.vercel.app
+REFRAME_CORS_ORIGINS=https://reframe.vercel.app,https://www.reframe.vercel.app
 
 # Groq Configuration
 REFRAME_GROQ_DAILY_COST_THRESHOLD=10.0
@@ -213,8 +209,6 @@ SKETCH2BIM_NEXTAUTH_SECRET=lFGHiDWlnSC1yn1F95VgqttX0WZ2s4o+Ybsm9ELw564=
 SKETCH2BIM_AUTH_SECRET=lFGHiDWlnSC1yn1F95VgqttX0WZ2s4o+Ybsm9ELw564=
 
 # Google OAuth (Sketch2BIM-specific)
-SKETCH2BIM_GOOGLE_CLIENT_ID=620186529337-3e8vnit3kpn5a4q4k9mreceg1f63vd4g.apps.googleusercontent.com
-SKETCH2BIM_GOOGLE_SECRET=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
 
 # API Configuration
 SKETCH2BIM_NEXT_PUBLIC_API_URL=https://sketch2bim-backend.onrender.com
@@ -342,3 +336,7 @@ SKETCH2BIM_IDS_FILE_PATH=
 #
 # =============================================================================
 
+# Shared Google OAuth Client ID (used by all apps via kvshvl.in)
+GOOGLE_CLIENT_ID=620186529337-lrr0bflcuihq2gnsko6vbrnsdv2u3ugu.apps.googleusercontent.com
+# Shared Google OAuth Client Secret (used by all apps via kvshvl.in)
+GOOGLE_CLIENT_SECRET=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
