--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "vercel-build": "git submodule update --init --recursive || true && next build",
     "start": "next start",
     "lint": "next lint",
     "build:workspaces": "npm run build --workspaces",
@@ -24,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kushalsamant/kvshvl-platform.git"
+    "url": "https://github.com/kushalsamant/kushalsamant.github.io.git"
   },
   "author": "Kushal Samant",
   "license": "MIT",
