--- a/apps/ask/frontend/package.json
+++ b/apps/ask/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "vercel-build": "git submodule update --init --recursive || true && next build",
+    "vercel-build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -15,7 +15,8 @@
     "next": "16.0.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "recharts": "^2.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
