--- a/apps/sketch2bim/frontend/package.json
+++ b/apps/sketch2bim/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "vercel-build": "git submodule update --init --recursive || true && next build",
+    "vercel-build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
