--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     name: platform-api
     runtime: python
     rootDir: apps/platform-api
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -e packages/shared-backend && pip install -r apps/platform-api/requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
