--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "vercel-build": "git submodule update --init --recursive || true && next build",
+    "vercel-build": "next build",
     "start": "next start",
     "lint": "next lint",
     "build:workspaces": "npm run build --workspaces",
@@ -31,7 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "@auth/upstash-redis-adapter": "^2.11.1",
-    "@kushalsamant/design-template": "^1.3.2",
+    "@kushalsamant/design-template": "workspace:*",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@types/react-syntax-highlighter": "^15.5.11",
