--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     runtime: python
     rootDir: apps/platform-api
     buildCommand: pip install --upgrade pip && pip install -e ./packages/shared-backend && pip install -r ./apps/platform-api/requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: cd apps/platform-api && uvicorn main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
       # Application Configuration
