--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@auth/upstash-redis-adapter": "^2.11.1",
     "@kushalsamant/design-template": "file:./packages/design-system",
+    "@kvshvl/shared-frontend": "file:./packages/shared-frontend",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@types/react-syntax-highlighter": "^15.5.11",
@@ -52,7 +53,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "^16.1.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
@@ -61,8 +62,7 @@
     "tailwind-merge": "^3.3.1",
     "three": "^0.160.0",
     "three-stdlib": "^2.28.0",
-    "web-ifc": "^0.0.51",
-    "xlsx": "^0.18.5"
+    "web-ifc": "^0.0.51"
   },
   "devDependencies": {
     "@types/micro": "^7.3.7",
