--- a/packages/shared-frontend/package.json
+++ b/packages/shared-frontend/package.json
@@ -4,6 +4,28 @@
   "description": "Shared frontend utilities for KVSHVL platform",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./auth": {
+      "types": "./dist/auth/index.d.ts",
+      "default": "./dist/auth/index.js"
+    },
+    "./payments": {
+      "types": "./dist/payments/index.d.ts",
+      "default": "./dist/payments/index.js"
+    },
+    "./cost-monitoring": {
+      "types": "./dist/cost-monitoring/index.d.ts",
+      "default": "./dist/cost-monitoring/index.js"
+    },
+    "./settings": {
+      "types": "./dist/settings/index.d.ts",
+      "default": "./dist/settings/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
@@ -20,7 +42,7 @@
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "next": "^14.0.0",
+    "next": "^14.0.0 || ^15.0.0 || ^16.0.0",
     "razorpay": "^2.9.2"
   },
   "devDependencies": {
