--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "groq-sdk": "^0.34.0",
     "lucide-react": "^0.552.0",
     "micro": "^10.0.1",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "next-auth": "5.0.0-beta.30",
     "razorpay": "^2.9.2",
     "react": "^18.3.1",
@@ -54,10 +54,10 @@
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^16.1.0",
+    "recharts": "^2.10.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
-    "recharts": "^2.10.0",
     "socket.io-client": "^4.6.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.160.0",
