--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   ],
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "vercel-build": "next build",
+    "build": "npm run build:workspaces && next build",
+    "vercel-build": "npm run build:workspaces && next build",
     "start": "next start",
     "lint": "next lint",
-    "build:workspaces": "npm run build --workspaces",
+    "build:workspaces": "npm run build --workspaces --if-present",
     "dev:workspaces": "npm run dev --workspaces --if-present",
     "test:workspaces": "npm run test --workspaces --if-present",
     "lint:workspaces": "npm run lint --workspaces --if-present",
