--- a/render.yaml
+++ b/render.yaml
@@ -8,9 +8,8 @@ services:
   - type: web
     name: platform-api
     runtime: python
-    rootDir: apps/platform-api
     buildCommand: pip install --upgrade pip && pip install -e ./packages/shared-backend && pip install -r ./apps/platform-api/requirements.txt
-    startCommand: cd apps/platform-api && uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: cd apps/platform-api && PYTHONPATH=/opt/render/project/src/apps/platform-api:$PYTHONPATH uvicorn main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
       # Application Configuration
