--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,76 +1,55 @@
-# GitHub Dependabot Configuration
-# Automated dependency updates and security alerts
+# Dependabot configuration for automated dependency updates
+# https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 
 version: 2
 updates:
-  # NPM dependencies (frontend)
+  # Enable version updates for npm dependencies
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
       day: "monday"
-      time: "09:00"
+      time: "04:00"
+    # Allow both direct and indirect dependency updates
     open-pull-requests-limit: 10
+    # Group minor and patch updates together
+    groups:
+      development-dependencies:
+        dependency-type: "development"
+        update-types:
+          - "minor"
+          - "patch"
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+          - "patch"
+    # Only major version updates create separate PRs
     reviewers:
       - "kushalsamant"
     assignees:
       - "kushalsamant"
+    # Prefix for pull request titles
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "deps"
+      prefix-development: "deps-dev"
       include: "scope"
+    # Add labels to PRs
     labels:
       - "dependencies"
       - "automated"
+    # Ignore specific dependencies if needed
     ignore:
-      # Ignore major version updates for critical packages (manual review)
+      # Example: ignore major updates for stable packages
       - dependency-name: "next"
         update-types: ["version-update:semver-major"]
-      - dependency-name: "react"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "react-dom"
-        update-types: ["version-update:semver-major"]
 
-  # Design System package
-  - package-ecosystem: "npm"
-    directory: "/packages/design-system"
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      - "design-system"
-
-  # Shared Frontend package
-  - package-ecosystem: "npm"
-    directory: "/packages/shared-frontend"
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      - "shared-frontend"
-
-  # Python dependencies (backend)
-  - package-ecosystem: "pip"
-    directory: "/apps/platform-api"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-    open-pull-requests-limit: 10
-    reviewers:
-      - "kushalsamant"
-    commit-message:
-      prefix: "chore(deps)"
-    labels:
-      - "dependencies"
-      - "python"
-      - "backend"
-
-  # GitHub Actions (if any added in future)
+  # Enable security updates for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "monthly"
+      interval: "weekly"
+      day: "monday"
+      time: "04:00"
     labels:
       - "dependencies"
       - "github-actions"
