fix: restore PYTHONPATH with relative path for Python imports
The previous fix using 'python -m uvicorn' wasn't sufficient because:
- Build succeeds (dependencies install fine)
- Service fails to START (can't import application modules)
- Application needs PYTHONPATH to find local modules like 'models'

Solution:
- Keep 'python -m uvicorn' (best practice)
- Restore PYTHONPATH as environment variable with value '.'
- After 'cd apps/platform-api', current dir is the app root
- Python can now resolve imports like 'from models.ask_schemas import...'

This fixes the ModuleNotFoundError that occurs at service startup.

--- a/render.yaml
+++ b/render.yaml
@@ -12,6 +12,12 @@ services:
     startCommand: cd apps/platform-api && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
+      # Python Path Configuration
+      # Set to current directory (after 'cd apps/platform-api')
+      # Allows absolute imports like 'from models.xxx import yyy' to work
+      - key: PYTHONPATH
+        value: "."
+      
       # Application Configuration
       - key: PLATFORM_APP_NAME
         value: "KVSHVL Platform API"
